f-spot (0.9.0~21-1) UNRELEASED; urgency=medium

  * Switch to building from upstream.
  * Switch to dpkg-source 3.0 (quilt) format

 -- Christopher Hoskin <christopher.hoskin@gmail.com>  Mon, 13 Jun 2016 20:19:40 +0100

f-spot (0.9.0~20-2) unstable; urgency=medium

  * Upstream pre-release 
  * Finally fix crash on Import Photos? 

 -- Christopher Hoskin <christopher.hoskin@gmail.com>  Sat, 16 Jan 2016 08:39:09 +0000

f-spot (0.9.0~7-1) vivid; urgency=medium

  * Upstream pre-release

 -- Christopher Hoskin <christopher.hoskin@gmail.com>  Wed, 10 Jun 2015 10:54:58 +0100

f-spot (0.9.0~4-1) vivid; urgency=medium

  * Upstream pre-release

 -- Christopher Hoskin <christopher.hoskin@gmail.com>  Sun, 07 Jun 2015 12:39:41 +0100

f-spot (0.8.2-5.1) unstable; urgency=low

  * Non-maintainer upload.
  * debian/patches
    - cherry-pick as 0004-Fix-build-error-with-recent_gtk-sharp.patch
     (Closes: #713104)

 -- Hideki Yamane <henrich@debian.org>  Sun, 06 Oct 2013 15:23:06 +0900

f-spot (0.8.2-5) unstable; urgency=low

  * No-change rebuild for Mono 2.10 transition

 -- Jo Shields <directhex@apebox.org>  Thu, 19 Jan 2012 00:22:40 +0000

f-spot (0.8.2-4) unstable; urgency=low

  * [7e4d6ed] link libfspot with needed lib. Closes: #640436
  * [b0f2bad] fix dh --with flag use

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Mon, 05 Sep 2011 10:35:10 +0100

f-spot (0.8.2-3) unstable; urgency=low

  [ Iain Lane ]
  * [f187b28] Add new patch to fix compilation with new gtk#/mono 2.10
  * [104afec] Update to use my d.o email address

 -- Jo Shields <directhex@apebox.org>  Thu, 16 Jun 2011 20:15:27 +0100

f-spot (0.8.2-2) unstable; urgency=low

  * Upload to unstable
    + No longer includes libjpegtran (Closes: #625186)

 -- Iain Lane <laney@ubuntu.com>  Wed, 04 May 2011 12:11:53 +0100

f-spot (0.8.2-1) experimental; urgency=low

  * [1a54b49] Imported Upstream version 0.8.2
    - Bug fix release for the 0.8.x series.
    - Infobox crasher fixed (Paul Wellner Bou)